--- a/Search Page/style.css
+++ b/Search Page/style.css
@@ -9,12 +9,46 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 30px;
+        gap: 50px;
         align-items: center;
-        height: 40vh;
+        height: 50vh;
     }
 
-        .tabs-container {
-            display: flex;
-            gap: 30px;
+        #search-box {
+            border: 2px solid grey;
+            border-radius: 13px;
+            padding: 12px 18px;
+            min-width: 300px;
+            text-align: center;
+            font-size: 18px;
         }
+
+        #search-box:active {
+            border: none;
+        }
+
+        .tabs-container {
+            width: 900px;
+            display: flex;
+            justify-content: center;
+            /* align-items: center; */
+            gap: 40px;
+            flex-wrap: wrap;
+        }
+
+            .search-button {
+                padding: 10px 15px;
+                font-size: 18px;
+            }
+
+            #twitter-button {
+                border: 1px solid #36c;
+                border-radius: 30px;
+                background-color: white;
+                color: #36c;
+            }
+
+            img {
+                margin-top: 3px;
+                padding-left: 5px;
+            }
