--- a/Search Page/style.css
+++ b/Search Page/style.css
@@ -52,3 +52,9 @@
                 margin-top: 3px;
                 padding-left: 5px;
             }
+
+
+
+
+/* Twitter icon downloaded from: */
+/* https://en.wikipedia.org/wiki/File:Twitter-logo.svg */
