--- a/Search Page/style.css
+++ b/Search Page/style.css
@@ -9,21 +9,21 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        gap: 30px;
+        gap: 35px;
         align-items: center;
-        /* height: 80vh; */
+        height: 90vh;
     }
 
         #main-header {
-            margin: 30px 0 0;
-            font-size: 32px;
+            margin: 60px 0 20px;
+            font-size: 40px;
             font-family: 'Lato', serif;
             /* font-family: 'Arvo', serif; */
             /* font-family: 'Open Sans', sans-serif; */
         }
 
         #search-box {
-            border: 2px solid grey;
+            border: 2px solid rgb(175, 174, 174);
             /* border-radius: 13px; */
             padding: 12px 18px;
             min-width: 500px;
@@ -44,12 +44,13 @@
             justify-content: center;
             flex-direction: row;
             /* align-items: center; */
-            gap: 10px;
+            /* gap: 10px; */
             flex-wrap: wrap;
         }
 
             .tabs-container-child {
                 /* border: 2px solid firebrick; */
+                margin: 0 20px;
                 border-radius: 10px;
                 padding: 25px;
                 width: 180px;
@@ -91,6 +92,8 @@
                     border: none;
                     border-radius: 30px;
                     padding: 10px 15px;
+                    width: 180px;
+                    line-height: 1.3;
                     font-size: 18px;
                 }
 
