--- a/Search Page/style.css
+++ b/Search Page/style.css
@@ -119,6 +119,7 @@
                     border-radius: 30px;
                     padding: 10px 15px;
                     width: 180px;
+                    /* height: 50px; */
                     line-height: 1.3;
                     font-size: 18px;
                 }
