--- a/JS_Download_Image/Download all images in a container/style.css
+++ b/JS_Download_Image/Download all images in a container/style.css
@@ -1,16 +1,48 @@
 .parent {
-    border: 2px solid salmon;
+    /* border: 2px solid salmon; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
-
+    align-items: center;
 }
 
-    .image-container {
-        border: 2px solid firebrick;
+    .container {
+        /* border: 2px solid firebrick; */
         width: 1000px;
     }
 
+    .image-container {
+        /* width: 1000px; */
+        border-radius: 5px;
+        padding: 20px 10px;
+        background-color: #ebebeb;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
         img {
-            max-width: 49%;
+            border-radius: 5px;
+            margin: 7px 0;
+            /* width: 48%; */
+            width: 480px;
         }
 
+    .button-container {
+        /* padding: 10px; */
+        display: flex;
+        justify-content: flex-end;
+    }
+
+        .button {
+            margin: 20px 20px 20px 0;
+            border: none;
+            border-radius: 8px;
+            padding: 8px 12px;
+            font-weight: bold;
+            background-color: #4267B2;
+            color: white;
+            width: 185px;
+            height: 50px;
+        }
