Added a heading at the top of the page to describe which method is being used to download the images. In the stylesheet set the flex-direction to column and aligned items in center. Also increased the width of the images from 33% to 42%.

--- a/JS_Download_Image/Download Single Image by double-clicking/style.css
+++ b/JS_Download_Image/Download Single Image by double-clicking/style.css
@@ -1,7 +1,9 @@
 .parent {
     border: 2px solid salmon;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 
 }
 
@@ -11,6 +13,6 @@
     }
 
         img {
-            max-width: 33%;
+            max-width: 42%;
         }
 
