--- a/style.css
+++ b/style.css
@@ -1,22 +1,47 @@
+body {
+    background-color: #0d4a68;
+}
+
 .parent {
     /* border: 2px solid gold; */
     display: flex;
     justify-content: center;
+    align-items: center;
+    /* background-color: gold; */
+    /* background-color: #093145; */
+    height: 700px;
+
 }
 
     .link-container {
-        margin: 50px 0;
+        /* margin: 50px 0; */
         /* border: 2px solid salmon; */
+        border-radius: 30px;
+        padding: 0 55px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 30px;
+        justify-content: center;
+        gap: 35px;
+        height: 70%;
+        /* background-color: rgb(168, 161, 161); */
+        background-color: white;
+        /* background-color: rgb(247, 247, 152); */
         /* width: 50%; */
     }
 
         .page-link {
-            /* list-style: none; */
+            /* border: 2px solid gold; */
+            border-radius: 50px;
+            padding: 12px 25px 15px;
             text-decoration: none;
-            color: black;
+            /* color: rgb(233, 232, 223); */
+            color: white;
+            /* background-color: #039180; */
+            background-color: #093145;
             font-size: 20px;
+            font-family: 'Lato', sans-serif;
+            /* font-family: 'Roboto', sans-serif; */
+            font-weight: 400;
+            /* font-weight: bold; */
         }
