Updated CSS to make download link more visible by increasing its opacity and adding a cursor pointer. Also, updated the blur effect on the image to be less opaque.

--- a/JS_Download_Image/Download Single Image with a click anywhere on the image/style.css
+++ b/JS_Download_Image/Download Single Image with a click anywhere on the image/style.css
@@ -27,12 +27,14 @@
         }
 
         .image-container-child:hover .download-link {
+            cursor: pointer;
             opacity: 1;
         }
 
         .image-container-child:hover .dwImage {
             filter: blur(1.5px);
-            cursor: pointer;;
+            opacity: 0.8;
+            cursor: pointer;
         }
 
             .dwImage {
