--- a/Movie Search Page/style.css
+++ b/Movie Search Page/style.css
@@ -1,9 +1,9 @@
 body {
     background: url(paul-volkmer-fX-qWsXl5x8-unsplash.jpg);
+    background-size: cover;
     /* backdrop-filter: blur(1px); */
     font-family: 'Lato', sans-serif;
     font-size: 1em;
-    /* font-weight: bold; */
 }
 
 .parent {
@@ -16,112 +16,125 @@ body {
     justify-content: flex-start;
 }
 
-    .search-image-container {
-        margin: 2em 0 2em;
-        /* border: 2px solid salmon; */
+    .search-container {
+        margin: 0 0 2em;
+        /* border: 2px solid gold; */
         display: flex;
-        justify-content: flex-start;
-        /* gap: 4em; */
+        /* flex-direction: column; */
+        justify-content: center;
+        align-items: center;
+        gap: 3em;
         width: 60em;
-        height: 24em;
+        height: 7em;
+        /* width: 30em; */
+        /* height: 20em; */
     }
 
-        .search-container {
-            margin-left: 3em;
-            /* border: 2px solid gold; */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 2em;
-            width: 30em;
-            /* height: 20em; */
+        #movie-search-input {
+            margin: 0;
+            border: 1px solid gray;
+            padding: 0.8em;
+            font-size: 1.1em;
+            font-weight: bold;
+            width: 19em;
+            text-align: center;
+            color: white;
         }
 
-            #movie-search-input {
-                margin: 0;
-                border: 1px solid gray;
-                padding: 0.8em;
-                font-size: 1.1em;
-                font-weight: bold;
-                width: 17em;
-                text-align: center;
-                color: white;
-            }
+        .button {
+            padding: 0.5em 1em;
+            font-size: 1.2em;
+            font-weight: bold;
+        }
 
-            #movie-search-input::before #movie-poster {
-                opacity: 0;
-            }
+        #movie-search-input::before #movie-poster {
+            opacity: 0;
+        }
 
-            #fetch-button:hover {
-                cursor: pointer;
-            }
+        #fetch-details-button:hover, #trailer-button:hover {
+            cursor: pointer;
+        }
 
-            #fetch-button {
-                padding: 0.5em 1em;
-                background-color: #f3ce13;
-                /* height: 2em; */
-                /* width: 8em; */
-                font-size: 1.2em;
-                font-weight: bold;
-            }
+        #fetch-details-button {
+            background-color: #f3ce13;
+            /* height: 2em; */
+            /* width: 8em; */
+        }
+
+        #get-trailer-button {
+            border-radius: 5%/50%;
+            background-color: #FF0000;
+            color: white;
+            width: 8em;
+        }
+
+    .details-image-container {
+        /* border: 2px solid greenyellow; */
+        display: flex;
+        justify-content: space-evenly;
+        /* gap: 2em; */
+    }
 
         #movie-poster {
             margin-left: 5em;
             /* margin: 0 0 0 3em; */
-            /* border-radius: 2px; */
+            border-radius: 2px;
             /* border: 2px solid gold; */
             /* width: 10em; */
             height: 23em;
             /* width: 20em; */
         }
 
-    .movie-details-container {
-        /* margin: 5em 0 0; */
-        /* border: 2px solid salmon; */
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 1em;
-        /* justify-content: space-between; */
-        width: 75em;
-        font-family: 'Lato', sans-serif;
-        font-weight: bold;
-    }
-
-        .child-container {
-            /* border: 2px solid greenyellow; */
+        .movie-details-container {
+            /* margin: 5em 0 0; */
+            /* border: 2px solid salmon; */
             display: flex;
-            /* flex-wrap: wrap; */
-            /* gap: 1em; */
-            /* flex-direction: column; */
-            /* justify-content: center; */
+            flex-direction: column;
             align-items: flex-start;
-            /* background-color: gray; */
+            gap: 1em;
+            /* justify-content: space-between; */
+            width: 75em;
+            font-family: 'Lato', sans-serif;
+            font-weight: bold;
         }
 
-            .label, .detail-area {
-                /* border: 1px solid gray; */
-                font-size: 1.1em;
+            .child-container {
+                /* border: 2px solid greenyellow; */
+                display: flex;
+                /* flex-wrap: wrap; */
+                /* gap: 1em; */
+                /* flex-direction: column; */
+                /* justify-content: center; */
+                align-items: flex-start;
+                /* background-color: gray; */
             }
 
-            .label {
-                margin: 2em 0 0 5.5em;
-                color: white;
-                width: 4.5em;
-            }
+                .label, .detail-area {
+                    /* border: 1px solid gray; */
+                    font-size: 1.1em;
+                }
 
-            .detail-area {
-                margin: 2em 0 0 2em;
-                color: #5799ef;
-                width: 20em;
-            }
+                .label {
+                    margin: 2em 0 0 4em;
+                    color: white;
+                    width: 4.5em;
+                    visibility: hidden;
+                }
+
+                .detail-area {
+                    margin: 2em 0 0 2em;
+                    color: #5799ef;
+                    width: 20em;
+                }
 
     .trailer-container {
-        margin: 5em;
-        border: 2px solid greenyellow;
+        margin: 4em;
+        /* border: 2px solid greenyellow; */
+        border-radius: 25px;
+        display: flex;
+        gap: 5em;
     }
 
-        #trailer {
+        .trailer {
             height: 20em;
         }
