--- a/Movie Search Page/style.css
+++ b/Movie Search Page/style.css
@@ -62,7 +62,7 @@ body {
         }
 
         #get-trailer-button {
-            border-radius: 5%/50%;
+            /* border-radius: 5%/50%; */
             background-color: #FF0000;
             color: white;
             width: 8em;
@@ -92,7 +92,7 @@ body {
             flex-direction: column;
             align-items: flex-start;
             gap: 1em;
-            /* justify-content: space-between; */
+            justify-content: center;
             width: 75em;
             font-family: 'Lato', sans-serif;
             font-weight: bold;
