--- a/Movie Search Page/style.css
+++ b/Movie Search Page/style.css
@@ -133,15 +133,16 @@ body {
                 }
 
     .actor-poster-container {
-        /* border: 2px solid greenyellow; */
+        border: 2px solid greenyellow;
         display: flex;
+        justify-content: flex-start;
         gap: 3em;
         /* width: 60em; */
         /* height: 22em; */
     }
 
         .tmdb-actor-poster {
-            /* border: 2px solid salmon; */
+            border: 2px solid salmon;
             border-radius: 10px;
             height: 15em;
         }
