Added hover effect to download links.

--- a/JS_Download_Image/Download Single Image with the Download Icon/style.css
+++ b/JS_Download_Image/Download Single Image with the Download Icon/style.css
@@ -53,6 +53,10 @@
                 opacity: 0;
             }
 
+            .download-link:hover {
+                cursor: pointer;
+            }
+
             /* .download-link:hover + .dwImage {
                 filter: blur(1px);
             } */
